<resources>
    <string name="app_name">My Application</string>
    <string name="title_alterar_senha">Alterar Senha</string>
    <string name="hint_senha_atual">Senha Atual</string>
    <string name="hint_nova_senha">Nova Senha</string>
    <string name="hint_confirmar_nova_senha">Confirmar Nova Senha</string>
    <string name="btn_salvar">Salvar</string>
    <string name="cd_voltar">Voltar</string>
    <string name="title_editar_perfil">Editar Perfil</string>
    <string name="cd_foto_perfil">Foto do Perfil</string>
    <string name="cd_mudar_foto">Mudar foto de perfil</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_cep">CEP</string>
    <string name="btn_salvar_alteracoes">Salvar Alterações</string>
    <string name="chat">Chat</string>
    <string name="bem_vindo">Bem-vindo!!!!</string>
    <string name="slogan">Alugue e descubra novos mundos</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="titulo_cadastro">Criar Conta</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="aceitar_termos">Aceitar os Termos de Serviço</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="ja_tem_conta">Já tem conta? Entrar</string>
    <string name="titulo_recuperar">Recuperar Senha</string>
    <string name="texto_informativo">Informe seu e-mail para receber o código de redefinição</string>
    <string name="hint_email_recuperacao">seuemail@exemplo.com</string>
    <string name="botao_enviar_codigo">Enviar Código</string>
    <string name="link_voltar_login">Voltar ao Login</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="descricao_codigo">Informe o código recebido no e-mail</string>
    <string name="reenviar_codigo">Reenviar código</string>
    <string name="continuar">Continuar</string>
    <string name="title_retirada_livro">Retirada do Livro</string>
    <string name="instructions_retirada">Apresente este código na biblioteca para retirar seu livro</string>
    <string name="cd_codigo_barras">Código de barras para retirada do livro</string>
    <string name="title_deixar_avaliacao">Deixar uma Avaliação</string>
    <string name="label_qualidade_livro">Qualidade do livro</string>
    <string name="label_qualidade_fisica">Qualidade física do livro</string>
    <string name="hint_comentario">Escreva seu comentário…</string>
    <string name="btn_enviar_avaliacao">Enviar avaliação</string>

</resources>