<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#FFFFFF">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="32dp"
        android:contentDescription="Logo do App"
        android:background="@android:drawable/btn_default"
        android:scaleType="centerInside"
        android:padding="12dp"
        android:layout_gravity="center" />

    <!-- TÍTULO -->
    <TextView
        android:id="@+id/tvBemVindo"
        android:text="@string/bem_vindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textColor="#000000" />

    <!-- SUBTÍTULO -->
    <TextView
        android:id="@+id/tvSlogan"
        android:text="@string/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#555555"
        android:layout_marginBottom="32dp" />

    <!-- BOTÃO ENTRAR -->
    <Button
        android:id="@+id/btnEntrar"
        android:text="@string/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9662ED"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp" />

    <!-- BOTÃO CRIAR CONTA -->
    <Button
        android:id="@+id/btnCriarConta"
        android:text="@string/criar_conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D5DED8"
        android:textColor="#000000" />

</LinearLayout>
