<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ReviewActivity">

    <ScrollView
        android:id="@+id/contentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:layout_above="@+id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/cd_voltar"
                    android:padding="12dp"
                    android:src="@drawable/ic_arrow_back"
                    app:tint="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/tvTituloAvaliacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title_deixar_avaliacao"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="24sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_qualidade_livro"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <RatingBar
                android:id="@+id/ratingBarConteudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_marginBottom="24dp"
                android:theme="@style/RatingBar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_qualidade_fisica"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"/>

            <RatingBar
                android:id="@+id/ratingBarFisico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_marginBottom="24dp"
                android:theme="@style/RatingBar"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comentario"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etComentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:gravity="top"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnEnviarAvaliacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_enviar_avaliacao"
                android:backgroundTint="#1E88E5"
                app:cornerRadius="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="12dp"
                android:layout_gravity="center_horizontal|bottom"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.Material3.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F7F2FA"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
        app:itemIconTint="@color/bottom_nav_item_color_selector"
        app:itemTextColor="@color/bottom_nav_item_color_selector"
        app:labelVisibilityMode="labeled"
        />
</RelativeLayout>